Use relative path for all file operations.

--- a/src/main/webapp/css/custom-style.css
+++ b/src/main/webapp/css/custom-style.css
@@ -1,3 +1,13 @@
+
+.row.display-flex {
+    display: flex;
+    flex-wrap: wrap;
+}
+.row.display-flex > [class*='col-'] {
+    display: flex;
+    flex-direction: column;
+}
+
 /* ------------------------------------------------------------------------------------------------------------------- */
 /* Size of charts in a card.                                                                                           */
 /* ------------------------------------------------------------------------------------------------------------------- */
