--- a/plugin/src/main/webapp/css/custom-style.css
+++ b/plugin/src/main/webapp/css/custom-style.css
@@ -1,13 +1,3 @@
-
-.row.display-flex {
-    display: flex;
-    flex-wrap: wrap;
-}
-.row.display-flex > [class*='col-'] {
-    display: flex;
-    flex-direction: column;
-}
-
 /* ------------------------------------------------------------------------------------------------------------------- */
 /* Size of charts in a card.                                                                                           */
 /* ------------------------------------------------------------------------------------------------------------------- */
@@ -19,6 +9,10 @@
     display: block;
     margin-left: auto;
     margin-right: auto;
+}
+
+.log-output {
+    font-size: var(--font-size-sm);
 }
 
 /* ------------------------------------------------------------------------------------------------------------------- */
