--- a/plugin/src/main/webapp/css/custom-style.css
+++ b/plugin/src/main/webapp/css/custom-style.css
@@ -28,6 +28,10 @@
     background-image: -o-linear-gradient(left, #f0f0f0, #8c8b8b, #f0f0f0);
 }
 
+.subsection-title {
+    font-weight: bold;
+}
+
 /* Add padding-top for more space */
 .tab-content > .active {
     display: block;
