add case distinction for no warnings, no new but outstanding ones and new and outstanding ones

--- a/plugin/src/main/webapp/css/pull-request-portlet.css
+++ b/plugin/src/main/webapp/css/pull-request-portlet.css
@@ -8,6 +8,12 @@
     fill: #009688;
 }
 
+.no-new-issues-banner {
+    fill: #009688;
+    width: 30px;
+    height: 30px;
+}
+
 .no-issues-body {
     transform: translateY(10%);
 }
