Add click events to zoomable trend chart.
Withing the issues details page one can now click into the trend chart and the corresponding build will open.

--- a/plugin/src/main/webapp/css/custom-style.css
+++ b/plugin/src/main/webapp/css/custom-style.css
@@ -2,6 +2,15 @@
 /* Size of charts in a card.                                                                                           */
 /* ------------------------------------------------------------------------------------------------------------------- */
 
+.card-chart-carousel {
+    width: 100%;
+    min-height: 256px;
+    min-width: 256px;
+    display: block;
+    padding-left: 20px;
+    padding-right: 20px;
+}
+
 .log-output {
     font-size: var(--font-size-sm);
 }
