Use new build status icons for quality gate status.
Moved the whole Java based summary rendering code to the client side.
So we can apply CSS styling in a simpler way.

--- a/plugin/src/main/webapp/css/custom-style.css
+++ b/plugin/src/main/webapp/css/custom-style.css
@@ -53,6 +53,8 @@
     fill: #b4b4b4;
     height: 16px;
     width: 16px;
+    vertical-align: text-bottom;
+    margin-left: 0.2em;
 }
 
 /* ------------------------------------------------------------------------------------------------------------------- */
