--- a/plugin/src/main/webapp/css/custom-prism.css
+++ b/plugin/src/main/webapp/css/custom-prism.css
@@ -11,9 +11,8 @@ pre > code.highlight {
 .analysis-warning {
     white-space: normal;
     border-radius: 4px;
-    border:1px solid #CCC;
+    border:0px solid #CCC;
     background-color:white;
-    font-family: Arial, Helvetica, sans-serif; /* Avoid the font override from the pre to affect the message */
     -moz-box-shadow:    2px 2px 18px 0 #ccc;
     -webkit-box-shadow: 2px 2px 18px 0 #ccc;
     box-shadow:         2px 2px 18px 0 #ccc;
@@ -21,12 +20,13 @@ pre > code.highlight {
 
 .analysis-warning-title {
     color: black;
-    padding-left: 0.25em;
+    padding-left: 0em;
     padding-right: 1em;
 }
 
 .analysis-title-column {
     vertical-align: middle;
+    padding-left: 0em;
 }
 
 .analysis-detail {
@@ -37,11 +37,12 @@ pre > code.highlight {
 
 .analysis-title {
     display: block;
-    padding: 15px 10px;
+    padding: 15px 0px;
     margin-bottom: 0;
     background: #FFF9C4;
     font-weight: normal;
     transition: background-color .2s ease;
+    border-spacing: 0px;
 }
 
 .analysis-detail > pre {
