--- a/plugin/src/main/webapp/css/custom-prism.css
+++ b/plugin/src/main/webapp/css/custom-prism.css
@@ -13,7 +13,7 @@ pre > code.highlight {
     border-radius: 4px;
     border:1px solid #CCC;
     background-color:white;
-    font-family: Arial, Helvetica, sans-serif; /* Avoid the font override from the pre to affect the message */
+    font-family: Consolas, Monaco, 'Andale Mono', 'Ubuntu Mono', monospace; /* Avoid the font override from the pre to affect the message */
     -moz-box-shadow:    2px 2px 18px 0 #ccc;
     -webkit-box-shadow: 2px 2px 18px 0 #ccc;
     box-shadow:         2px 2px 18px 0 #ccc;
@@ -21,8 +21,10 @@ pre > code.highlight {
 
 .analysis-warning-title {
     color: black;
-    padding-left: 0.25em;
+    padding-left: 0em;
     padding-right: 1em;
+    font-size: 1em !important;
+    font: bold 65%/1.5 sans-serif;
 }
 
 .analysis-title-column {
@@ -37,7 +39,7 @@ pre > code.highlight {
 
 .analysis-title {
     display: block;
-    padding: 15px 10px;
+    padding: 15px 0px;
     margin-bottom: 0;
     background: #FFF9C4;
     font-weight: normal;
