--- a/plugin/src/main/webapp/css/prism.css
+++ b/plugin/src/main/webapp/css/prism.css
@@ -1,234 +1,284 @@
-/* PrismJS 1.18.0
-https://prismjs.com/download.html#themes=prism&languages=markup+css+clike+javascript+bash+c+csharp+cpp+docker+erb+go+groovy+java+json+kotlin+markdown+markup-templating+perl+php+python+ruby+scala+smarty+sql+swift+typescript+yaml&plugins=line-highlight+line-numbers */
-/**
- * prism.js default theme for JavaScript, CSS and HTML
- * Based on dabblet (http://dabblet.com)
- * @author Lea Verou
- */
-
-code[class*="language-"],
-pre[class*="language-"] {
-	color: black;
-	background: none;
-	text-shadow: 0 1px white;
-	font-family: Consolas, Monaco, 'Andale Mono', 'Ubuntu Mono', monospace;
-	font-size: 1em;
-	text-align: left;
-	white-space: pre;
-	word-spacing: normal;
-	word-break: normal;
-	word-wrap: normal;
-	line-height: 1.5;
-
-	-moz-tab-size: 4;
-	-o-tab-size: 4;
-	tab-size: 4;
-
-	-webkit-hyphens: none;
-	-moz-hyphens: none;
-	-ms-hyphens: none;
-	hyphens: none;
+/* PrismJS 1.25.0
+https://prismjs.com/download.html#themes=prism-coy&languages=markup+css+clike+javascript+bash+c+csharp+cpp+docker+erb+go+groovy+java+json+kotlin+markdown+markup-templating+perl+php+python+ruby+scala+smarty+sql+swift+typescript+yaml&plugins=line-highlight+line-numbers+keep-markup */
+code[class*=language-], pre[class*=language-] {
+    color: #000;
+    background: 0 0;
+    font-family: Consolas, Monaco, 'Andale Mono', 'Ubuntu Mono', monospace;
+    font-size: 1em;
+    text-align: left;
+    white-space: pre;
+    word-spacing: normal;
+    word-break: normal;
+    word-wrap: normal;
+    line-height: 1.5;
+    -moz-tab-size: 4;
+    -o-tab-size: 4;
+    tab-size: 4;
+    -webkit-hyphens: none;
+    -moz-hyphens: none;
+    -ms-hyphens: none;
+    hyphens: none
 }
 
-pre[class*="language-"]::-moz-selection, pre[class*="language-"] ::-moz-selection,
-code[class*="language-"]::-moz-selection, code[class*="language-"] ::-moz-selection {
-	text-shadow: none;
-	background: #b3d4fc;
+pre[class*=language-] {
+    position: relative;
+    margin: .5em 0;
+    overflow: visible;
+    padding: 1px
 }
 
-pre[class*="language-"]::selection, pre[class*="language-"] ::selection,
-code[class*="language-"]::selection, code[class*="language-"] ::selection {
-	text-shadow: none;
-	background: #b3d4fc;
+pre[class*=language-] > code {
+    position: relative;
+    z-index: 1;
+    border-left: 10px solid #358ccb;
+    box-shadow: -1px 0 0 0 #358ccb, 0 0 0 1px #dfdfdf;
+    background-color: #fdfdfd;
+    background-image: linear-gradient(transparent 50%, rgba(69, 142, 209, .04) 50%);
+    background-size: 3em 3em;
+    background-origin: content-box;
+    background-attachment: local
 }
 
-@media print {
-	code[class*="language-"],
-	pre[class*="language-"] {
-		text-shadow: none;
-	}
+code[class*=language-] {
+    max-height: inherit;
+    height: inherit;
+    padding: 0 1em;
+    display: block;
+    overflow: auto
 }
 
-/* Code blocks */
-pre[class*="language-"] {
-	padding: 1em;
-	margin: .5em 0;
-	overflow: auto;
+:not(pre) > code[class*=language-], pre[class*=language-] {
+    background-color: #fdfdfd;
+    -webkit-box-sizing: border-box;
+    -moz-box-sizing: border-box;
+    box-sizing: border-box;
+    margin-bottom: 1em
 }
 
-:not(pre) > code[class*="language-"],
-pre[class*="language-"] {
-	background: #f5f2f0;
+:not(pre) > code[class*=language-] {
+    position: relative;
+    padding: .2em;
+    border-radius: .3em;
+    color: #c92c2c;
+    border: 1px solid rgba(0, 0, 0, .1);
+    display: inline;
+    white-space: normal
 }
 
-/* Inline code */
-:not(pre) > code[class*="language-"] {
-	padding: .1em;
-	border-radius: .3em;
-	white-space: normal;
+pre[class*=language-]:after, pre[class*=language-]:before {
+    content: '';
+    display: block;
+    position: absolute;
+    bottom: .75em;
+    left: .18em;
+    width: 40%;
+    height: 20%;
+    max-height: 13em;
+    box-shadow: 0 13px 8px #979797;
+    -webkit-transform: rotate(-2deg);
+    -moz-transform: rotate(-2deg);
+    -ms-transform: rotate(-2deg);
+    -o-transform: rotate(-2deg);
+    transform: rotate(-2deg)
 }
 
-.token.comment,
-.token.prolog,
-.token.doctype,
-.token.cdata {
-	color: slategray;
+pre[class*=language-]:after {
+    right: .75em;
+    left: auto;
+    -webkit-transform: rotate(2deg);
+    -moz-transform: rotate(2deg);
+    -ms-transform: rotate(2deg);
+    -o-transform: rotate(2deg);
+    transform: rotate(2deg)
+}
+
+.token.block-comment, .token.cdata, .token.comment, .token.doctype, .token.prolog {
+    color: #7d8b99
 }
 
 .token.punctuation {
-	color: #999;
+    color: #5f6364
 }
 
-.token.namespace {
-	opacity: .7;
+.token.boolean, .token.constant, .token.deleted, .token.function-name, .token.number, .token.property, .token.symbol, .token.tag {
+    color: #c92c2c
 }
 
-.token.property,
-.token.tag,
-.token.boolean,
-.token.number,
-.token.constant,
-.token.symbol,
-.token.deleted {
-	color: #905;
+.token.attr-name, .token.builtin, .token.char, .token.function, .token.inserted, .token.selector, .token.string {
+    color: #2f9c0a
 }
 
-.token.selector,
-.token.attr-name,
-.token.string,
-.token.char,
-.token.builtin,
-.token.inserted {
-	color: #690;
+.token.entity, .token.operator, .token.url, .token.variable {
+    color: #a67f59;
+    background: rgba(255, 255, 255, .5)
 }
 
-.token.operator,
-.token.entity,
-.token.url,
-.language-css .token.string,
-.style .token.string {
-	color: #9a6e3a;
-	background: hsla(0, 0%, 100%, .5);
+.token.atrule, .token.attr-value, .token.class-name, .token.keyword {
+    color: #1990b8
 }
 
-.token.atrule,
-.token.attr-value,
-.token.keyword {
-	color: #07a;
+.token.important, .token.regex {
+    color: #e90
 }
 
-.token.function,
-.token.class-name {
-	color: #DD4A68;
+.language-css .token.string, .style .token.string {
+    color: #a67f59;
+    background: rgba(255, 255, 255, .5)
 }
 
-.token.regex,
-.token.important,
-.token.variable {
-	color: #e90;
+.token.important {
+    font-weight: 400
 }
 
-.token.important,
 .token.bold {
-	font-weight: bold;
+    font-weight: 700
 }
+
 .token.italic {
-	font-style: italic;
+    font-style: italic
 }
 
 .token.entity {
-	cursor: help;
+    cursor: help
+}
+
+.token.namespace {
+    opacity: .7
+}
+
+@media screen and (max-width: 767px) {
+    pre[class*=language-]:after, pre[class*=language-]:before {
+        bottom: 14px;
+        box-shadow: none
+    }
+}
+
+pre[class*=language-].line-numbers.line-numbers {
+    padding-left: 0
+}
+
+pre[class*=language-].line-numbers.line-numbers code {
+    padding-left: 3.8em
+}
+
+pre[class*=language-].line-numbers.line-numbers .line-numbers-rows {
+    left: 0
+}
+
+pre[class*=language-][data-line] {
+    padding-top: 0;
+    padding-bottom: 0;
+    padding-left: 0
+}
+
+pre[data-line] code {
+    position: relative;
+    padding-left: 4em
+}
+
+pre .line-highlight {
+    margin-top: 0
 }
 
 pre[data-line] {
-	position: relative;
-	padding: 1em 0 1em 3em;
+    position: relative;
+    padding: 1em 0 1em 3em
 }
 
 .line-highlight {
-	position: absolute;
-	left: 0;
-	right: 0;
-	padding: inherit 0;
-	margin-top: 1em; /* Same as .prism’s padding-top */
-
-	background: hsla(24, 20%, 50%,.08);
-	background: linear-gradient(to right, hsla(24, 20%, 50%,.1) 70%, hsla(24, 20%, 50%,0));
-
-	pointer-events: none;
-
-	line-height: inherit;
-	white-space: pre;
+    position: absolute;
+    left: 0;
+    right: 0;
+    padding: inherit 0;
+    margin-top: 1em;
+    background: hsla(24, 20%, 50%, .08);
+    background: linear-gradient(to right, hsla(24, 20%, 50%, .1) 70%, hsla(24, 20%, 50%, 0));
+    pointer-events: none;
+    line-height: inherit;
+    white-space: pre
 }
 
-	.line-highlight:before,
-	.line-highlight[data-end]:after {
-		content: attr(data-start);
-		position: absolute;
-		top: .4em;
-		left: .6em;
-		min-width: 1em;
-		padding: 0 .5em;
-		background-color: hsla(24, 20%, 50%,.4);
-		color: hsl(24, 20%, 95%);
-		font: bold 65%/1.5 sans-serif;
-		text-align: center;
-		vertical-align: .3em;
-		border-radius: 999px;
-		text-shadow: none;
-		box-shadow: 0 1px white;
-	}
-
-	.line-highlight[data-end]:after {
-		content: attr(data-end);
-		top: auto;
-		bottom: .4em;
-	}
-
-.line-numbers .line-highlight:before,
-.line-numbers .line-highlight:after {
-	content: none;
+@media print {
+    .line-highlight {
+        -webkit-print-color-adjust: exact;
+        color-adjust: exact
+    }
 }
 
-pre[class*="language-"].line-numbers {
-	position: relative;
-	padding-left: 3.8em;
-	counter-reset: linenumber;
+.line-highlight:before, .line-highlight[data-end]:after {
+    content: attr(data-start);
+    position: absolute;
+    top: .4em;
+    left: .6em;
+    min-width: 1em;
+    padding: 0 .5em;
+    background-color: hsla(24, 20%, 50%, .4);
+    color: #f4f1ef;
+    font: bold 65%/1.5 sans-serif;
+    text-align: center;
+    vertical-align: .3em;
+    border-radius: 999px;
+    text-shadow: none;
+    box-shadow: 0 1px #fff
 }
 
-pre[class*="language-"].line-numbers > code {
-	position: relative;
-	white-space: inherit;
+.line-highlight[data-end]:after {
+    content: attr(data-end);
+    top: auto;
+    bottom: .4em
+}
+
+.line-numbers .line-highlight:after, .line-numbers .line-highlight:before {
+    content: none
+}
+
+pre[id].linkable-line-numbers span.line-numbers-rows {
+    pointer-events: all
+}
+
+pre[id].linkable-line-numbers span.line-numbers-rows > span:before {
+    cursor: pointer
+}
+
+pre[id].linkable-line-numbers span.line-numbers-rows > span:hover:before {
+    background-color: rgba(128, 128, 128, .2)
+}
+
+pre[class*=language-].line-numbers {
+    position: relative;
+    padding-left: 3.8em;
+    counter-reset: linenumber
+}
+
+pre[class*=language-].line-numbers > code {
+    position: relative;
+    white-space: inherit
 }
 
 .line-numbers .line-numbers-rows {
-	position: absolute;
-	pointer-events: none;
-	top: 0;
-	font-size: 100%;
-	left: -3.8em;
-	width: 3em; /* works for line-numbers below 1000 lines */
-	letter-spacing: -1px;
-	border-right: 1px solid #999;
-
-	-webkit-user-select: none;
-	-moz-user-select: none;
-	-ms-user-select: none;
-	user-select: none;
-
+    position: absolute;
+    pointer-events: none;
+    top: 0;
+    font-size: 100%;
+    left: -3.8em;
+    width: 3em;
+    letter-spacing: -1px;
+    border-right: 1px solid #999;
+    -webkit-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none
 }
 
-	.line-numbers-rows > span {
-		pointer-events: none;
-		display: block;
-		counter-increment: linenumber;
-	}
+.line-numbers-rows > span {
+    display: block;
+    counter-increment: linenumber
+}
 
-		.line-numbers-rows > span:before {
-			content: counter(linenumber);
-			color: #999;
-			display: block;
-			padding-right: 0.8em;
-			text-align: right;
-		}
-
+.line-numbers-rows > span:before {
+    content: counter(linenumber);
+    color: #999;
+    display: block;
+    padding-right: .8em;
+    text-align: right
+}
