--- a/plugin/src/main/webapp/css/custom-prism.css
+++ b/plugin/src/main/webapp/css/custom-prism.css
@@ -82,3 +82,10 @@ pre > code.highlight {
     right: 25px;
     vertical-align: center;
 }
+
+.squiggled-underline {
+    text-decoration: underline;
+    text-decoration-style: solid;
+    text-decoration-color: red;
+    text-decoration-thickness: 5px;
+}
