rename css style to "code-mark"

--- a/plugin/src/main/webapp/css/custom-prism.css
+++ b/plugin/src/main/webapp/css/custom-prism.css
@@ -83,7 +83,7 @@ pre > code.highlight {
     vertical-align: center;
 }
 
-.squiggled-underline {
+.code-mark {
     text-decoration: underline;
     text-decoration-style: solid;
     text-decoration-color: red;
