--- a/plugin/src/main/webapp/css/custom-prism.css
+++ b/plugin/src/main/webapp/css/custom-prism.css
@@ -19,6 +19,12 @@ pre > code.highlight {
     box-shadow:         2px 2px 18px 0 #ccc;
 }
 
+.analysis-icon {
+    fill: var(--fa-image-color);
+    height: 24px;
+    width: 24px;
+}
+
 .analysis-warning-title {
     color: black;
     padding-left: 0.25em;
